Fixes to work with the Intel compilers on MCR:   1) In an F77 test, do not do a return in main.   2) Eliminate the C versions of certain LAPACK routines.      The real LAPACK routines are used instead.  The      C versions result in duplicate symbols with different      sizes.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407592

--- a/mpqc/bin/mkf77sym.pl.in
+++ b/mpqc/bin/mkf77sym.pl.in
@@ -18,7 +18,7 @@ else {
     open(OUT,">$out");
 
     while(<IN>) {
-        if (/\# *define F77_([A-Z]+)/) {
+        if (/\# *define F77_([A-Z]+[A-Z0-9]+)/) {
             $f77name = $1;
             $cname = f77symbol($method, $f77name);
             printf OUT "#define F77_%s %s\n", $f77name, $cname;
