--- a/mpqc/src/lib/math/Makefile
+++ b/mpqc/src/lib/math/Makefile
@@ -5,7 +5,7 @@ endif
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 
-SUBDIRS = linpackd scmat optimize isosurf symmetry
+SUBDIRS = scmat optimize isosurf symmetry
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalSubDirs
 
