PthreadThreadGrp::init_priority is now a no-op on OS's that don't support the necessary pthreads and scheduler priority range calls.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407603

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1124,6 +1124,8 @@ if test X$HAVE_PTHREAD = Xyes; then
   AC_CHECK_FUNC(pthread_attr_getschedpolicy)
   AC_CHECK_FUNC(pthread_attr_setschedparam)
   AC_CHECK_FUNC(pthread_attr_getschedparam)
+  AC_CHECK_FUNC(sched_get_priority_max)
+  AC_CHECK_FUNC(sched_get_priority_min)
 fi
 
 AC_CHECK_LIB(dl,main)
