--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -46,9 +46,9 @@ CXXSRCS = mbptr12.cc \
   transform_ijxy.cc transform_ixjy.cc transform_ikjy.cc \
   transform_123inds.cc transform_13inds.cc transform_12inds.cc \
   compute_ixjy.cc compute_ikjy.cc compute_ijxy.cc \
-  r12int_eval.cc compute_a_gebc.cc compute_a_gebc_abs1.cc \
+  r12int_eval.cc \
   coulomb.cc exchange.cc fock.cc ebc_contribs.cc gbc_contribs.cc \
-  compute_a_gebc_vbs.cc compute_vxb_a_symm.cc compute_vxb_a_asymm.cc \
+  compute_a_gebc_vbs.cc \
   r12_amps.cc compute_amps.cc \
   twobodygrid.cc svd.cc linearr12.cc intermeds_g12.cc \
   singlerefinfo.cc utils.cc compute_vxb_a_new.cc \
