--- a/mpqc/doc/doxygen.cfg.in
+++ b/mpqc/doc/doxygen.cfg.in
@@ -397,7 +397,9 @@ RECURSIVE              = YES
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
 EXCLUDE                = @top_srcdir@/src/lib/chemistry/qc/cints/eri_quartet_data.h \
-                         @top_srcdir@/src/lib/chemistry/qc/cints/grt_quartet_data.h
+                         @top_srcdir@/src/lib/chemistry/qc/cints/grt_quartet_data.h \
+                         @top_srcdir@/src/lib/chemistry/qc/mbptr12/eri_quartet_data.h \
+                         @top_srcdir@/src/lib/chemistry/qc/mbptr12/grt_quartet_data.h
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or directories 
 # that are symbolic links (a Unix filesystem feature) are excluded from the input.
