minor addition to clean target
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407610

--- a/mpqc/src/bin/mpqc/validate/Makefile
+++ b/mpqc/src/bin/mpqc/validate/Makefile
@@ -338,7 +338,7 @@ default::
 .PHONY: check_clean check_clean_scratch
 
 check_clean: check_clean_scratch
-	/bin/rm -f $(RUN)/*.out
+	/bin/rm -f $(RUN)/*.out $(RUN)/*.diff
 
 check_clean_scratch:
 	/bin/rm -rf $(RUN)/*.tmp $(RUN)/*.wfn $(RUN)/*.hess $(RUN)/*.results report.txt
