Substitute ALWAYS_USE_MPI.  Since this is used in mpqcrun.in.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407619

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1216,6 +1216,7 @@ fi
 
 AC_SUBST(HAVE_PERF)
 AC_SUBST(HAVE_MPI)
+AC_SUBST(ALWAYS_USE_MPI)
 AC_SUBST(HAVE_ARMCI)
 AC_SUBST(HAVE_MPIIO)
 AC_SUBST(HAVE_PTHREAD)
