Increase the maximum memory allocation so tests can be done with many threads.  Some of these cases would fail with 4 threads with the old allocation.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407623

--- a/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_+ebc.in
+++ b/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_+ebc.in
@@ -30,7 +30,7 @@
      stdapprox = "a'"
      ebc = true
      gbc = false
-     memory = 10000000
+     memory = 100MB
      r12ints = posix
      nfzc = 1
      integrals<IntegralCints>: ()
