--- a/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_+gbc+ebc.in
+++ b/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_+gbc+ebc.in
@@ -30,7 +30,7 @@
      stdapprox = "a'"
      ebc = true
      gbc = true
-     memory = 10000000
+     memory = 100MB
      r12ints = posix
      nfzc = 1
      integrals<IntegralCints>: ()
