--- a/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_cabs+.in
+++ b/mpqc/src/bin/mpqc/validate/ref/methods_mp2r12ap_cabs+.in
@@ -30,7 +30,7 @@
      stdapprox = "a'"
      ebc = true
      gebc = true
-     memory = 10000000
+     memory = 100MB
      r12ints = posix
      nfzc = 1
      integrals<IntegralCints>: ()
