--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1614,10 +1614,24 @@ AC_CHECK_HEADERS(libint2/libint2.h,
   )
 AC_LANG_RESTORE
 
-dnl ----------- make sure we have everything for cints and mbptr12 ----------
+dnl ----------- make sure we have everything for cints ----------
 
 if test ! X$HAVE_LIBR12 = Xyes -o ! X$HAVE_LIBINT = Xyes; then
+  HAVE_CINTS=no
   EXCLUDED_DIRS="-x SRC_LIB_CHEMISTRY_QC_CINTS -x SRC_LIB_CHEMISTRY_QC_MBPTR12 $EXCLUDED_DIRS"
+fi
+
+dnl ----------- make sure we have everything for libint2 interface ----------
+
+if test ! X$HAVE_LIBINT2 = Xyes; then
+  HAVE_LIBINT2_INT=no
+  EXCLUDED_DIRS="-x SRC_LIB_CHEMISTRY_QC_LIBINT2 $EXCLUDED_DIRS"
+fi
+
+dnl ----------- make sure we have everything for mbptr12 ----------
+
+if test X$HAVE_LIBINT2_INT = Xno -a X$HAVE_CINST = Xno; then
+  EXCLUDED_DIRS="-x SRC_LIB_CHEMISTRY_QC_MBPTR12 $EXCLUDED_DIRS"
 fi
 
 dnl --------- Template instantiation. ---------
