Only need libint2 library to compile libint2 interface.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407646

--- a/mpqc/src/lib/chemistry/qc/libint2/Makefile
+++ b/mpqc/src/lib/chemistry/qc/libint2/Makefile
@@ -51,14 +51,8 @@ LIBOBJ = $(LIBSRC:%.c=%.$(OBJSUF))
 LIBOBJ := $(LIBOBJ:%.cc=%.$(OBJSUF))
 
 LTLINKLIBOPTS += $(LDFLAGS)
-ifeq ($(HAVE_LIBINT),yes)
-  LTLINKLIBOPTS += -lint
-endif
-ifeq ($(HAVE_LIBR12),yes)
-  LTLINKLIBOPTS += -lr12
-endif
-ifeq ($(HAVE_LIBDERIV),yes)
-  LTLINKLIBOPTS += -lderiv
+ifeq ($(HAVE_LIBINT2),yes)
+  LTLINKLIBOPTS += -lint2
 endif
 
 DISTFILES = $(TESTCSRC) $(INC) Makefile
