--- a/mpqc/src/lib/scconfig.h.in
+++ b/mpqc/src/lib/scconfig.h.in
@@ -211,6 +211,12 @@
 /* Define if you have the libint2 header file and library.  */
 #undef HAVE_LIBINT2
 
+/* Define if IntegralCints can be compiled.  */
+#undef HAVE_INTEGRALCINTS
+
+/* Define if IntegralLibint2 can be compiled.  */
+#undef HAVE_INTEGRALLIBINT2
+
 /* Define if your MPI implementation has MPI-IO functions */
 #undef HAVE_MPIIO
 
