--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1,6 +1,6 @@
-define([sc_mmm_version],[2.3.0])
-define([sc_buildid],[])
-define([sc_so_version],[7:0:0])
+define([sc_mmm_version],[2.3.1])
+define([sc_buildid],[beta])
+define([sc_so_version],[7:1:0])
 
 dnl Process this file with autoconf to produce a configure script.
 define([AC_CACHE_LOAD], )dnl for debugging configure.in
