Define HAVE_INTEGRALCINTS and HAVE_INTEGRALLIBINT2 in scconfig.h so that dependent codes will know if it is safe to include appropriate headers.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407653

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1616,23 +1616,23 @@ AC_LANG_RESTORE
 
 dnl ----------- make sure we have everything for cints ----------
 
-HAVE_INTEGRALCINTS=yes
 if test ! X$HAVE_LIBR12 = Xyes -o ! X$HAVE_LIBINT = Xyes; then
   HAVE_INTEGRALCINTS=no
   EXCLUDED_DIRS="-x SRC_LIB_CHEMISTRY_QC_CINTS -x SRC_LIB_CHEMISTRY_QC_MBPTR12 $EXCLUDED_DIRS"
+else
+  AC_DEFINE(HAVE_INTEGRALCINTS)
+  AC_SUBST(HAVE_INTEGRALCINTS)
 fi
-AC_DEFINE(HAVE_INTEGRALCINTS)
-AC_SUBST(HAVE_INTEGRALCINTS)
 
 dnl ----------- make sure we have everything for libint2 interface ----------
 
-HAVE_INTEGRALLIBINT2=yes
 if test ! X$HAVE_LIBINT2 = Xyes; then
   HAVE_INTEGRALLIBINT2=no
   EXCLUDED_DIRS="-x SRC_LIB_CHEMISTRY_QC_LIBINT2 $EXCLUDED_DIRS"
+else
+  AC_DEFINE(HAVE_INTEGRALLIBINT2)
+  AC_SUBST(HAVE_INTEGRALLIBINT2)
 fi
-AC_DEFINE(HAVE_INTEGRALLIBINT2)
-AC_SUBST(HAVE_INTEGRALLIBINT2)
 
 dnl ----------- make sure we have everything for mbptr12 ----------
 
