--- a/mpqc/src/bin/mpqc/ccarun.in
+++ b/mpqc/src/bin/mpqc/ccarun.in
@@ -345,7 +345,13 @@ sub jobrunner {
         waitpid($pid,'');
         
         rename "$tmp_out/pOut0", "$pwd/$outputprefix/$file.out";       
-        unlink "$tmp_out/pErr0";
+
+        my @pout_files = glob "$tmp_out/pOut*";
+        my @perr_files = glob "$tmp_out/pErr*";
+        foreach( (@pout_files, @perr_files) ) {
+          unlink "$_";
+        }
+
         rename "$tmp_out/results.txt", "$pwd/$outputprefix/$file.results";
         rmdir "$tmp_out";
     }
