Fixed message associated with --with-template option.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407668

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -442,7 +442,7 @@ template_instantiation=none
 AC_ARG_WITH(template,
 [  --with-template         Specifies template instantation model.],
 template_instantiation=$withval
-echo Using extra include directories: $withval
+echo Using template instatiation model: $withval
 )
 
 scincludedir=$includedir
