Check what kinds of integrals Libint2 supports and modify the interface accordingly. Exceptions can be thrown by IntegralLibint2.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407738

--- a/mpqc/lib/LocalMakefile.in
+++ b/mpqc/lib/LocalMakefile.in
@@ -127,6 +127,9 @@ HAVE_PERF = @HAVE_PERF@
 HAVE_LIBINT = @HAVE_LIBINT@
 HAVE_LIBR12 = @HAVE_LIBR12@
 HAVE_LIBDERIV = @HAVE_LIBDERIV@
+HAVE_LIBINT2 = @HAVE_LIBINT2@
+HAVE_LIBINT2_ERI = @HAVE_LIBINT2_ERI@
+HAVE_LIBINT2_G12 = @HAVE_LIBINT2_G12@
 
 SYSLIBS = @LIBS@ @FLIBS@
 
