--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1620,6 +1620,40 @@ AC_CHECK_HEADERS(libint2/libint2.h,
     AC_SUBST(HAVE_LIBINT2)
     LIBS="-lint2 $LIBS"
     )
+  AC_MSG_CHECKING([if libint2 can compute ERI])
+  AC_COMPILE_IFELSE(
+    AC_LANG_PROGRAM(
+      [[#include <libint2/libint2.h>
+        #if LIBINT2_SUPPORT_ERI
+        void libint2_support_eri() {}
+        #endif
+      ]],
+      [[
+        libint2_support_eri();
+      ]]
+      ),
+    [HAVE_LIBINT2_ERI=yes
+     AC_SUBST(HAVE_LIBINT2_ERI)
+     AC_MSG_RESULT([yes])],
+    [AC_MSG_RESULT([no])]
+    )
+  AC_MSG_CHECKING([if libint2 can compute G12])
+  AC_COMPILE_IFELSE(
+    AC_LANG_PROGRAM(
+      [[#include <libint2/libint2.h>
+        #if LIBINT2_SUPPORT_G12
+        void libint2_support_g12() {}
+        #endif
+      ]],
+      [[
+        libint2_support_g12();
+      ]]
+      ),
+    [HAVE_LIBINT2_G12=yes
+     AC_SUBST(HAVE_LIBINT2_G12)
+     AC_MSG_RESULT([yes])],
+    [AC_MSG_RESULT([no])]
+    )
   )
 AC_LANG_RESTORE
 
