Added a cubic line search class, MCSearch, based on MCSRCH and MCSTEP from ANL. The default is still to do no line search.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407762

--- a/mpqc/src/lib/math/optimize/Makefile
+++ b/mpqc/src/lib/math/optimize/Makefile
@@ -36,13 +36,14 @@ LD=$(CXX)
 
 CXXSRC = function.cc opt.cc update.cc qnewton.cc newton.cc \
          gdiis.cc efc.cc steep.cc dfp.cc powell.cc \
-         scextrap.cc scextrapmat.cc diis.cc transform.cc conv.cc
+         scextrap.cc scextrapmat.cc diis.cc transform.cc conv.cc \
+         mcsearch.cc
 CSRC = 
 
 LIBOBJ = $(CXXSRC:%.cc=%.$(OBJSUF)) $(CSRC:%.c=%.$(OBJSUF))
 
 INC = function.h opt.h gdiis.h efc.h update.h qnewton.h newton.h \
-      scextrap.h scextrapmat.h diis.h transform.h conv.h
+      scextrap.h scextrapmat.h diis.h transform.h conv.h mcsearch.h
 
 DEPENDINCLUDE =
 
