Added a few more validation support items for the KMLYP functional.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407779

--- a/mpqc/src/bin/mpqc/validate/Makefile
+++ b/mpqc/src/bin/mpqc/validate/Makefile
@@ -152,6 +152,7 @@ CKPTINPUTS = \
  ckpt_0mp2.in       ckpt_1hsosscf.in   ckpt_2efcopt.in    ckpt_qnewtopt.in \
  ckpt_0zapt2.in     ckpt_1mp2.in       ckpt_hsosscf.in \
  ckpt_0clksb3lyp.in     ckpt_1clksb3lyp.in     ckpt_clksb3lyp.in \
+ ckpt_0clkskmlyp.in     ckpt_1clkskmlyp.in     ckpt_clkskmlyp.in \
  ckpt_0clksbp86.in      ckpt_1clksbp86.in      ckpt_clksbp86.in \
  ckpt_0clkshfg96.in     ckpt_1clkshfg96.in     ckpt_clkshfg96.in \
  ckpt_0clksmpwpw91.in   ckpt_1clksmpwpw91.in   ckpt_clksmpwpw91.in \
@@ -200,7 +201,8 @@ clks_blyp.in   hsosks_lsdax.in       uks_b88.in \
 clks_lsdax.in  hsosks_xa.in          uks_blyp.in \
 clks_xa.in     uks_lsdax.in          uks_xa.in \
 hsoshf.in      osshf.in              qmmm1.in \
-qmmm2.in
+qmmm2.in \
+clks_kmlyp.in  hsosks_kmlyp.in       uks_kmlyp.in
 
 ifeq ($(HAVE_MBPTR12),yes)
  METHODSINPUTS += \
@@ -587,6 +589,7 @@ checkckpt:
 	@$(CHECKOUT) $(RUN)/ckpt_0zapt2.out $(RUN)/ckpt_1zapt2.out
 	@$(CHECKOUT) $(RUN)/ckpt_clksxalpha.out $(RUN)/ckpt_1clksxalpha.out
 	@$(CHECKOUT) $(RUN)/ckpt_clksb3lyp.out $(RUN)/ckpt_1clksb3lyp.out
+	@$(CHECKOUT) $(RUN)/ckpt_clkskmlyp.out $(RUN)/ckpt_1clkskmlyp.out
 	@$(CHECKOUT) $(RUN)/ckpt_clksbp86.out $(RUN)/ckpt_1clksbp86.out
 	@$(CHECKOUT) $(RUN)/ckpt_clkshfg96.out $(RUN)/ckpt_1clkshfg96.out
 	@$(CHECKOUT) $(RUN)/ckpt_clksmpwpw91.out $(RUN)/ckpt_1clksmpwpw91.out
