updating integral package keyword
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407787

--- a/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2vopaque.in
+++ b/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2vopaque.in
@@ -19,7 +19,7 @@ basis<GaussianBasisSet>: (
 % using cca integrals
 integrals<IntegralCCA>: (
   integral_buffer = opaque
-  integral_package = intv3
+  default_package = cints
   evaluator_factory = MPQC.IntegralEvaluatorFactory
   molecule = $:molecule
 )
