--- a/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2varray.in
+++ b/mpqc/src/bin/mpqc/validate/ref/ccacints_scfccpvdzc2varray.in
@@ -19,7 +19,7 @@ basis<GaussianBasisSet>: (
 % using cca integrals
 integrals<IntegralCCA>: (
   integral_buffer = array
-  integral_package = intv3
+  default_package = cints
   evaluator_factory = MPQC.IntegralEvaluatorFactory
   molecule = $:molecule
 )
