switched from strings to enums for integrals config stuff
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407788

--- a/mpqc/src/lib/chemistry/cca/Makefile
+++ b/mpqc/src/lib/chemistry/cca/Makefile
@@ -45,6 +45,7 @@ BABEL_CLASSES = \
   MPQC.GaussianBasis_Atomic \
   MPQC.GaussianBasis_Molecular \
   MPQC.IntegralEvaluatorFactory \
+  MPQC.IntegralEvaluator1 \
   MPQC.IntegralEvaluator2 \
   MPQC.IntegralEvaluator3 \
   MPQC.IntegralEvaluator4 \
