Fixed a typo in an error message.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407802

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1519,7 +1519,7 @@ AC_CHECK_FUNC($F77_DGESVD,HAVE_LAPACK=yes,[
 AC_SUBST(HAVE_LAPACK)
 if test X$HAVE_LAPACK != Xyes; then
   echo "Could not link to the LAPACK library.  It can be obtained at"
-  echo "http://www.netlib.org/lapack.  Use --with-libdir and/or --with-libs"
+  echo "http://www.netlib.org/lapack.  Use --with-libdirs and/or --with-libs"
   echo "to specify the name of the library."
   AC_MSG_ERROR([LAPACK is required to complete the build])
 fi
