Added a new (not completely functional) Fock matrix builder.
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407885

--- a/mpqc/src/lib/chemistry/qc/scf/Makefile
+++ b/mpqc/src/lib/chemistry/qc/scf/Makefile
@@ -34,12 +34,12 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 TARGET_TO_MAKE = libSCscf
 BIN_OR_LIB = LIB
 
-TESTPROGS = scftest
+TESTPROGS = scftest focktest
 
-SRCS = scf.cc scfvector.cc scfgradient.cc scfops.cc effh.cc \
+SRCS = fbclhf.cc scf.cc scfvector.cc scfgradient.cc scfops.cc effh.cc \
        clscf.cc clhf.cc hsosscf.cc hsoshf.cc \
        ossscf.cc osshf.cc tcscf.cc tchf.cc \
-       uscf.cc uhf.cc \
+       uscf.cc uhf.cc fockbuild.cc clhfcontrib.cc \
        tmplinst.cc svd.cc
 
 LIBOBJ= $(SRCS:%.cc=%.$(OBJSUF))
@@ -51,13 +51,19 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalRules
 LIBS = $(shell $(LISTLIBS) $(INCLUDE) $(SRCDIR)/../dft/LIBS.h)
 
 scftest:: scftest.$(OBJSUF) $(LIBS)
-	$(LTLINK) $(CXX) $(LDFLAGS) -o scftest $^ $(SYSLIBS) $(LTLINKBINOPTS)
+	$(LTLINK) $(CXX) $(LDFLAGS) -o $@ $^ $(SYSLIBS) $(LTLINKBINOPTS)
 
 scftest.$(OBJSUF): scftest.cc
 	$(LTCOMP) $(CXX) $(CXXFLAGS) $(CPPFLAGS) -DSRCDIR=\"$(SRCDIR)\" -c $<
 
+focktest:: focktest.$(OBJSUF) $(LIBS)
+	$(LTLINK) $(CXX) $(LDFLAGS) -o $@ $^ $(SYSLIBS) $(LTLINKBINOPTS)
+
+focktest.$(OBJSUF): focktest.cc
+	$(LTCOMP) $(CXX) $(CXXFLAGS) $(CPPFLAGS) -DSRCDIR=\"$(SRCDIR)\" -c $<
+
 $(LIBOBJ:.$(OBJSUF)=.d): $(DEPENDINCLUDE)
 ifneq ($(DODEPEND),no)
-include $(LIBOBJ:.$(OBJSUF)=.d) scftest.d
+include $(LIBOBJ:.$(OBJSUF)=.d) scftest.d focktest.d
 endif
 
