Don't run $(LIBTOOL) --finish unless LIBTOOL is defined.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407904

--- a/mpqc/src/lib/Makefile
+++ b/mpqc/src/lib/Makefile
@@ -10,7 +10,9 @@ SUBDIRS = util math chemistry
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalSubDirs
 
 install::
+ifneq ($(LIBTOOL),)
 	$(LIBTOOL) --finish $(installroot)$(libdir)
+endif
 
 install_inc::
 	$(INSTALL) $(INSTALLDIROPT) $(installroot)$(includedir)
