Minor changes to support Red Storm.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407905

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -468,7 +468,11 @@ echo Using extra FORTRAN libraries: $withval
 have_flibs=no
 AC_ARG_WITH(flibs,
 [  --with-flibs            Specifies the F77 runtime (by default, will guess).],
-FLIBS=$withval
+if test "$withval" = yes; then
+  FLIBS=
+else
+  FLIBS=$withval
+fi
 have_flibs=yes
 echo Using FORTRAN runtime libraries: $withval
 )
