initial rewrite for integral super factory redesign and simplification
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407906

--- a/mpqc/src/lib/chemistry/qc/intcca/Makefile
+++ b/mpqc/src/lib/chemistry/qc/intcca/Makefile
@@ -78,7 +78,7 @@ endif
 
 # need babel headers generated
 ifneq ($(DODEPEND),no)
-include ../../cca/.babel-stamp
+include ../../cca/stamp-babel
 endif
-../../cca/.babel-stamp:
-	cd ../../cca; $(MAKE) .babel-stamp
+../../cca/stamp-babel:
+	cd ../../cca; $(MAKE) stamp-babel
