initial rewrite for integral super factory etc   + simplified by eliminating int1e.cc and int2e.cc, everything done in obint/tbint classes
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407908

--- a/mpqc/src/lib/chemistry/qc/intcca/Makefile
+++ b/mpqc/src/lib/chemistry/qc/intcca/Makefile
@@ -43,9 +43,9 @@ BIN_OR_LIB = LIB
 
 DEFINES += -DDMALLOC
 
-CXXSRC = int1e.cc int2e.cc obintcca.cc tbintcca.cc intcca.cc
+CXXSRC = obintcca.cc tbintcca.cc intcca.cc
 
-INC = int1e.h int2e.h obintcca.h tbintcca.h intcca.h cartit.h tform.h
+INC = obintcca.h tbintcca.h intcca.h cartit.h tform.h
 
 CPPFLAGS += -I../../cca
 LTLINKLIBOPTS += -L$(CCAFE_LIB) -R$(CCAFE_LIB) -lccafeCore \
