moved integral evaluator template implementation to header file, updated to babel-0.10.12
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407921

--- a/mpqc/src/lib/chemistry/cca/Makefile
+++ b/mpqc/src/lib/chemistry/cca/Makefile
@@ -55,7 +55,7 @@ BABEL_CLASSES = \
   MPQC.ComponentFactory \
   MPQC.SimpleDriver
 
-EXTRA_CXX_SRCS = socket.cc except.cc basis_cca_to_sc.cc integral_evaluator.cc
+EXTRA_CXX_SRCS = socket.cc except.cc basis_cca_to_sc.cc
 EXTRA_INCLUDES = socket.h except.h ccaiter.h integral_evaluator.h
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
