modified babel includes for babel v0.10.12
--HG--
branch : libint2
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/Libint2-branch%407922

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1862,7 +1862,7 @@ if test $components == "yes"; then
 
   LIBS="-L$CCAFE_LIB $LIBS"
   CCA_CHEM_INCLUDE=-I$CCA_CHEM_INCLUDE
-  BABEL_INCLUDE=-I$BABEL_INCLUDE
+  BABEL_INCLUDE="-I$BABEL_INCLUDE/c -I$BABEL_INCLUDE/cxx"
   CCA_SPEC_BABEL_INCLUDE=-I$CCA_SPEC_BABEL_INCLUDE
   CCAFE_INCLUDE="-I$CCAFE_INCLUDE -I$CCAFE_INCLUDE/dc/babel/babel-cca/server"
   CPPFLAGS="$CPPFLAGS $BABEL_INCLUDE $CCA_SPEC_BABEL_INCLUDE $CCA_CHEM_INCLUDE $CCAFE_INCLUDE"
