--- a/mpqc/lib/cca/components.cca.in
+++ b/mpqc/lib/cca/components.cca.in
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <libInfo>
+
 <scl>
   <library uri="@sclibdir@/cca/libSCchemistry.so"
    scope="global" resolution="now" >
@@ -14,37 +15,75 @@
     <class name="MPQC.SimpleDriver" desc="ior/impl" />
   </library>
 </scl>
-<componentDeployment name="MPQC.Chemistry_MoleculeViewer"
- paletteClassAlias="MPQC.MoleculeViewer" >
-   <environment> 
-     <ccaSpec binding="babel" /> <library loading="dynamic" />
-   </environment>
+
+<componentDeployment 
+  name="MPQC.Chemistry_MoleculeViewer"
+  paletteClassAlias="MPQC.Chemistry_MoleculeViewer" >
+  <environment> 
+    <ccaSpec binding="babel" />
+    <library loading="dynamic"
+             name="@prefix@/lib/cca/libSCchemistry.so"
+             libtool-archive="@prefix@/lib/cca/libSCchemistry.la"
+             shared-archive="@prefix@/lib/cca/libSCchemistry.so" />
+    <headers path="@prefix@/include/chemistry/cca"
+             files="MPQC_Chemistry_MoleculeViewer" />
+  </environment>
 </componentDeployment>
-<componentDeployment name="MPQC.Chemistry_QC_ModelFactory"
- paletteClassAlias="MPQC.ModelFactory" >
-   <environment>
-     <ccaSpec binding="babel" /> <library loading="dynamic" />
-   </environment>
+
+<componentDeployment 
+  name="MPQC.Chemistry_QC_ModelFactory"
+  paletteClassAlias="MPQC.Chemistry_QC_ModelFactory" >
+  <environment>
+    <ccaSpec binding="babel" /> 
+    <library loading="dynamic"
+             name="@prefix@/lib/cca/libSCchemistry.so"
+             libtool-archive="@prefix@/lib/cca/libSCchemistry.la"
+             shared-archive="@prefix@/lib/cca/libSCchemistry.so" />
+    <headers path="@prefix@/include/chemistry/cca"
+             files="MPQC_Chemistry_QC_ModelFactory" />
+  </environment>
 </componentDeployment>
+
 <componentDeployment
- name="MPQC.ChemistryOpt_CoordinateModel"
- paletteClassAlias="MPQC.CoordinateModel" >
-   <environment>
-     <ccaSpec binding="babel" /> <library loading="dynamic" />
-   </environment>
+  name="MPQC.ChemistryOpt_CoordinateModel"
+  paletteClassAlias="MPQC.ChemistryOpt_CoordinateModel" >
+  <environment>
+    <ccaSpec binding="babel" />
+    <library loading="dynamic"
+             name="@prefix@/lib/cca/libSCchemistry.so"
+             libtool-archive="@prefix@/lib/cca/libSCchemistry.la"
+             shared-archive="@prefix@/lib/cca/libSCchemistry.so" />
+    <headers path="@prefix@/include/chemistry/cca"
+             files="MPQC_ChemistryOpt_CoordinateModel" />
+  </environment>
 </componentDeployment>
+
 <componentDeployment
- name="MPQC.IntegralEvaluatorFactory"
- paletteClassAlias="MPQC.IntegralEvaluatorFactory" >
-   <environment>
-     <ccaSpec binding="babel" /> <library loading="dynamic" />
-   </environment>
+  name="MPQC.IntegralEvaluatorFactory"
+  paletteClassAlias="MPQC.IntegralEvaluatorFactory" >
+  <environment>
+    <ccaSpec binding="babel" />
+    <library loading="dynamic"
+             name="@prefix@/lib/cca/libSCchemistry.so"
+             libtool-archive="@prefix@/lib/cca/libSCchemistry.la"
+             shared-archive="@prefix@/lib/cca/libSCchemistry.so" />
+    <headers path="@prefix@/include/chemistry/cca"
+             files="MPQC_IntegralEvaluatorFactory" />
+  </environment>
 </componentDeployment>
+
 <componentDeployment
  name="MPQC.SimpleDriver"
  paletteClassAlias="MPQC.SimpleDriver" >
-   <environment>
-     <ccaSpec binding="babel" /> <library loading="dynamic" />
-   </environment>
+ <environment>
+   <ccaSpec binding="babel" />
+    <library loading="dynamic"
+             name="@prefix@/lib/cca/libSCchemistry.so"
+             libtool-archive="@prefix@/lib/cca/libSCchemistry.la"
+             shared-archive="@prefix@/lib/cca/libSCchemistry.so" />
+    <headers path="@prefix@/include/chemistry/cca"
+             files="MPQC_SimpleDriver" />
+ </environment>
 </componentDeployment>
+
 </libInfo>
